alignment issue fixed

--- a/css/questions.css
+++ b/css/questions.css
@@ -25,7 +25,7 @@
     text-align: left;
 }
 
-.answer-input > *{
+.draggable{
     margin-bottom: 10px;
 }
 
